test/syntax-errors/problem1.js
var expect = require('chai').expect;

var f = require('../../src/syntax-errors/problem1.js');

console.log("Everything OK!");